=== Safari-151 ===

2004-07-07  Trey Matteson  <trey@apple.com>

	3719051 - Safari doesn't update form inputs when a page was refreshed by javascript window.location
	... and at least 5 other cases in Radar

	Very similar problem to the Harvard PIN bug.  We need to be sure
	to not carry any state over when we are processing a client
	redirect, which reuses the same WebHistoryItem.

        Reviewed by John.

        * WebView.subproj/WebFrame.m:
        (-[WebFrame _transitionToCommitted:]):  Comment
        (-[WebFrame _opened]):  Clear form and scroll state on client redirect.

2004-07-06  Chris Blumenberg  <cblu@apple.com>

	Fixed: <rdar://problem/3715785> multiple frame injection vulnerability reported by Secunia, affects almost all browsers
	
        Reviewed by john, trey, kocienda.

        * WebCoreSupport.subproj/WebBridge.m:
        (-[WebBridge canTargetLoadInFrame:]): new method, return YES if the requesting frame is local, the target frame is an entire window or if the domain of the parent of the targeted frame equals this domain
        (-[WebBridge loadURL:referrer:reload:userGesture:target:triggeringEvent:form:formValues:]): call canTargetLoadInFrame: to make sure we can load the request
        (-[WebBridge postWithURL:referrer:target:data:contentType:triggeringEvent:form:formValues:]): ditto

2004-07-06  John Sullivan  <sullivan@apple.com>

        Reviewed by Trey.

        - fixed <rdar://problem/3717147> folder icon used for error page in back/forward 
        menu when iTunes is not installed

        * WebView.subproj/WebFrame.m:
        (-[WebFrame _transitionToCommitted:]):
        When displaying the error page for an unreachable URL, leave the requested URL
        in the WebHistoryItem; don't clobber it with a bogus one that represents the
        error page. This not only avoids the wrong-icon problem, but should also help
        in cases where an unreachable URL becomes reachable later on.

2004-07-06  Trey Matteson  <trey@apple.com>
